--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,8 @@
 
 html,
 body {
-  width: 100%;
-  min-height: 100%;
-  max-height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex: 1;
   margin: 0;
