Add hide and show on hover classes

--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,10 @@ body {
   font-family: NoiGrotesk-Semibold, NoiGrotesk-Light, monospace;
   scroll-behavior: smooth;
 }
+
+.hideOnHover:hover {
+  opacity: 0;
+}
+.showOnHover:hover {
+  opacity: 1;
+}
