Set animation props

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ body {
   scroll-behavior: smooth;
 }
 
+.hideOnHover,
+.showOnHover {
+  transition: all 0.5s;
+}
 .hideOnHover:hover {
   opacity: 0;
 }
